<resources>
    <string name="app_name">Eco Weather</string>
    <string name="appName1">Eco Weather</string>

    <string name="searchButtonDescription">search button</string>
    <string name="menuButtonDescription">menu button</string>
    <string name="logoDescricao">app logo</string>
    <string name="temperatura">30°C</string>
    <string name="scrollviewdescricao">scrollviewDescricao</string>
    <string name="fundoDescricao">floresta</string>
    <string name="parcialEnsolDescricao">icone parcialmente ensolarado</string>

    <string name="ttlNoticia1">Em 100 dias sob governo Lula, Brasil volta a engatinhar para o futuro</string>
    <string name="fonteNoticia1">fonte: greenpeace.org/</string>
    <string name="ttlNoticia2">Representamos VOCÊ na Conferência da ONU sobre a Água</string>
    <string name="fonteNoticia2">fonte: greenpeace.org/</string>
    <string name="ttlNoticia3">Previsão do tempo: a hora de agir é agora</string>
    <string name="fonteNoticia3">fonte: greenpeace.org/</string>

    <string name="logoNoticia1">logo greenpeace</string>
    <string name="logoNoticia2">logo greenpeace</string>
    <string name="logoNoticia3">logo greenpeace</string>

    <string name="ttlSecao">Notícias</string>

    <string name="condicaoClima">Parcialmente Ensolarado</string>
    <string name="sencacaoTermica">Sensação: 35°C</string>
    <string name="precipitacao">Precipitação: 0%</string>
    <string name="velocidadeVento">Vento: 9km/h</string>
    <string name="umidade">Umidade: 71%</string>
    <string name="localAtual">Manaus - AM</string>

    <string name="entrar">Entrar</string>

    <string name="textCadastro">Criar conta</string>

    <string name="titleCadastro">Cadastre-se</string>
</resources>