<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="MainActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/fundohead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Temperatura -->

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="67dp"
            android:background="@drawable/logo_name_1"
            android:contentDescription="@string/logoDescricao"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toStartOf="@+id/searchButton"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toEndOf="@+id/menuButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_search_light"
            android:contentDescription="@string/searchButtonDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="false"
            android:background="@drawable/ic_menu_light"
            android:contentDescription="@string/menuButtonDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contTemperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/container_components"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toEndOf="@id/header"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.457">

            <ImageView
                android:id="@+id/tempIcone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/partly_sunny"
                android:contentDescription="@string/parcialEnsolDescricao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewTemperatura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTemperatura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_bold"
                android:text="00°C"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contTemperatura"
            app:layout_constraintVertical_bias="0.02">

            <TextView
                android:id="@+id/textViewSensacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/sencacaoTermica"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textViewTipoClima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/condicaoClima"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPrecipitação"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/precipitacao"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewVento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/velocidadeVento"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewUmidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/umidade"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notícias"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNoticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="400dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEventos"
        app:layout_constraintStart_toStartOf="@+id/textViewEventos"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventos"
        android:nestedScrollingEnabled="false"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>
