<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_auth"
        tools:context=".TelaLogin">

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/logo_name_1"
            android:contentDescription="@string/logoDescricao"
            app:layout_constraintBottom_toTopOf="@+id/containerComponents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoApp"
            android:layout_height="160dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/EditText"
            android:hint="Digite o seu e-mail"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"/>

        <EditText
            android:id="@+id/editTextSenha"
            style="@style/EditText"
            android:hint="Digite a sua senha"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_eye"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEntrar"
            android:text="@string/entrar"
            android:layout_marginTop="30dp"
            style="@style/Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonEntrar"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/textTelaCriar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCadastro"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>